--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "@mui/material": "^5.10.5",
     "@reach/menu-button": "^0.16.1",
     "@reach/tooltip": "^0.16.0",
-    "@types/cors": "^2.8.12",
     "babel-plugin-import": "^1.13.5",
     "clipboard-js": "^0.3.6",
     "comlink": "^4.3.1",
@@ -46,6 +45,7 @@
     "serve-index": "^1.9.1",
     "vite-plugin-monaco-editor": "^1.1.0",
     "vite-plugin-pwa": "^0.13.1",
+    "workbox-cacheable-response": "^6.5.4",
     "workbox-core": "^6.5.4",
     "workbox-routing": "^6.5.4",
     "workbox-strategies": "^6.5.4",
@@ -61,6 +61,7 @@
     "@storybook/builder-vite": "^0.2.2",
     "@storybook/react": "^6.5.12",
     "@storybook/testing-library": "^0.0.13",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
     "@types/lodash-es": "^4.17.6",
     "@types/react": "^18.0.17",
