--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "devtools-protocol": "^0.0.1046751",
     "eslint": "^8.23.1",
     "express": "^4.18.1",
+    "flatted": "^3.2.7",
     "idb-keyval": "^6.2.0",
     "licia": "^1.37.0",
     "lodash-es": "^4.17.21",
@@ -43,6 +44,7 @@
     "react-virtualized-auto-sizer": "^1.0.7",
     "react-window": "^1.8.7",
     "serve-index": "^1.9.1",
+    "ts-is-defined": "^3.0.4",
     "ts-morph": "^16.0.0",
     "tsutils": "^3.21.0",
     "vite-plugin-monaco-editor": "^1.1.0",
