--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@blueprintjs/core": "^4.10.0",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "@ladle/react": "^2.4.4",
     "@mui/icons-material": "^5.10.3",
     "@mui/lab": "^5.0.0-alpha.99",
     "@mui/material": "^5.10.5",
@@ -23,6 +24,7 @@
     "babel-plugin-import": "^1.13.5",
     "clipboard-js": "^0.3.6",
     "comlink": "^4.3.1",
+    "concurrently": "^7.4.0",
     "cors": "^2.8.5",
     "devtools-protocol": "^0.0.1046751",
     "eslint": "^8.23.1",
