--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "preview": "vite preview",
     "storybook": "start-storybook -p 6006 --no-open",
     "build-storybook": "build-storybook",
-    "postinstall": "yarn patch-package"
+    "postinstall": "yarn patch-package",
+    "dev:vite": "vite --port 3000",
+    "dev:ladle": "ladle serve",
+    "dev:server": "nodemon"
   },
   "dependencies": {
     "@blueprintjs/core": "^4.10.0",
@@ -24,10 +27,9 @@
     "babel-plugin-import": "^1.13.5",
     "clipboard-js": "^0.3.6",
     "comlink": "^4.3.1",
-    "concurrently": "^7.4.0",
     "cors": "^2.8.5",
     "devtools-protocol": "^0.0.1046751",
-    "eslint": "^8.23.1",
+    "eslint": "^8.25.0",
     "express": "^4.18.1",
     "flatted": "^3.2.7",
     "idb-keyval": "^6.2.0",
@@ -41,6 +43,7 @@
     "penpal": "^6.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-monaco-editor": "^0.50.1",
     "react-mosaic-component": "^5.3.0",
     "react-penpal": "^1.0.4",
     "react-virtualized-auto-sizer": "^1.0.7",
@@ -74,12 +77,16 @@
     "@types/react-dom": "^18.0.6",
     "@types/serve-index": "^1.9.1",
     "@types/wicg-file-system-access": "^2020.9.5",
+    "@typescript-eslint/eslint-plugin": "^5.40.1",
+    "@typescript-eslint/parser": "^5.40.1",
     "@vitejs/plugin-react": "^2.1.0",
     "babel-loader": "^8.2.5",
-    "eslint-plugin-react": "^7.31.8",
+    "concurrently": "^7.4.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-react": "^7.31.10",
     "prettier": "^2.7.1",
     "ts-node": "^10.9.1",
-    "typescript": "^4.6.4",
+    "typescript": "^4.8.4",
     "vite": "^3.1.0",
     "vite-node": "^0.23.4"
   },
