--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "@mui/material": "^5.10.5",
     "@reach/menu-button": "^0.16.1",
     "@reach/tooltip": "^0.16.0",
+    "@zodios/core": "^10.4.3",
+    "@zodios/express": "^10.4.0",
+    "axios": "^1.1.3",
     "babel-plugin-import": "^1.13.5",
     "clipboard-js": "^0.3.6",
     "comlink": "^4.3.1",
@@ -58,6 +61,7 @@
     "workbox-core": "^6.5.4",
     "workbox-routing": "^6.5.4",
     "workbox-strategies": "^6.5.4",
+    "zod": "^3.19.1",
     "zustand": "^4.1.1"
   },
   "devDependencies": {
