--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "cors": "^2.8.5",
     "devtools-protocol": "^0.0.1046751",
     "eslint": "^8.25.0",
+    "eslint-plugin-import": "^2.26.0",
     "express": "^4.18.1",
     "flatted": "^3.2.7",
     "idb-keyval": "^6.2.0",
@@ -52,8 +53,10 @@
     "react-virtualized-auto-sizer": "^1.0.7",
     "react-window": "^1.8.7",
     "serve-index": "^1.9.1",
+    "subsecond": "^0.2.0",
     "ts-is-defined": "^3.0.4",
     "ts-morph": "^16.0.0",
+    "ts-unused-exports": "^8.0.0",
     "tsutils": "^3.21.0",
     "vite-plugin-monaco-editor": "^1.1.0",
     "vite-plugin-pwa": "^0.13.1",
@@ -74,6 +77,9 @@
     "@storybook/builder-vite": "^0.2.2",
     "@storybook/react": "^6.5.12",
     "@storybook/testing-library": "^0.0.13",
+    "@swc-node/register": "^1.5.4",
+    "@swc/cli": "^0.1.57",
+    "@swc/core": "^1.3.14",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
     "@types/lodash-es": "^4.17.6",
@@ -87,8 +93,10 @@
     "babel-loader": "^8.2.5",
     "concurrently": "^7.4.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-import-resolver-typescript": "^3.5.2",
     "eslint-plugin-react": "^7.31.10",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-unused-imports": "^2.0.0",
     "prettier": "^2.7.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4",
