--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "comlink": "^4.3.1",
     "cors": "^2.8.5",
     "devtools-protocol": "^0.0.1046751",
+    "dts-bundle-generator": "^7.0.0",
     "eslint": "^8.25.0",
     "eslint-plugin-import": "^2.26.0",
     "express": "^4.18.1",
@@ -47,12 +48,14 @@
     "patch-package": "^6.4.7",
     "penpal": "^6.2.2",
     "react": "^18.2.0",
+    "react-dev-utils": "^12.0.1",
     "react-dom": "^18.2.0",
     "react-monaco-editor": "^0.50.1",
     "react-mosaic-component": "^5.3.0",
     "react-penpal": "^1.0.4",
     "react-virtualized-auto-sizer": "^1.0.7",
     "react-window": "^1.8.7",
+    "rollup-plugin-dts": "^5.0.0",
     "serve-index": "^1.9.1",
     "subsecond": "^0.2.0",
     "ts-is-defined": "^3.0.4",
@@ -85,6 +88,7 @@
     "@types/express": "^4.17.14",
     "@types/lodash-es": "^4.17.6",
     "@types/react": "^18.0.17",
+    "@types/react-dev-utils": "^9.0.11",
     "@types/react-dom": "^18.0.6",
     "@types/serve-index": "^1.9.1",
     "@types/wicg-file-system-access": "^2020.9.5",
