--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
     "flatted": "^3.2.7",
     "idb-keyval": "^6.2.0",
     "licia": "^1.37.0",
+    "localforage": "^1.10.0",
     "lodash-es": "^4.17.21",
+    "match-sorter": "^6.3.1",
     "monaco-editor": "^0.34.0",
     "monaco-editor-core": "^0.34.0",
     "monaco-vim": "^0.3.4",
@@ -54,10 +56,12 @@
     "react-monaco-editor": "^0.50.1",
     "react-mosaic-component": "^5.3.0",
     "react-penpal": "^1.0.4",
+    "react-router-dom": "^6.4.3",
     "react-virtualized-auto-sizer": "^1.0.7",
     "react-window": "^1.8.7",
     "rollup-plugin-dts": "^5.0.0",
     "serve-index": "^1.9.1",
+    "sort-by": "^1.2.0",
     "subsecond": "^0.2.0",
     "ts-is-defined": "^3.0.4",
     "ts-morph": "^16.0.0",
