--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "@mui/material": "^5.10.5",
     "@reach/menu-button": "^0.16.1",
     "@reach/tooltip": "^0.16.0",
+    "@tanstack/react-query": "^4.18.0",
     "@zodios/core": "^10.4.3",
     "@zodios/express": "^10.4.0",
+    "@zodios/react": "^10.4.0",
     "axios": "^1.1.3",
     "babel-plugin-import": "^1.13.5",
     "clipboard-js": "^0.3.6",
@@ -76,7 +78,8 @@
     "zustand": "^4.1.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.19.1",
+    "@babel/core": "^7.20.5",
+    "@babel/helper-plugin-utils": "^7.20.2",
     "@emotion/babel-plugin": "^11.10.2",
     "@storybook/addon-actions": "^6.5.12",
     "@storybook/addon-essentials": "^6.5.12",
@@ -88,6 +91,8 @@
     "@swc-node/register": "^1.5.4",
     "@swc/cli": "^0.1.57",
     "@swc/core": "^1.3.14",
+    "@types/babel-core": "^6.25.7",
+    "@types/babel__helper-plugin-utils": "^7.10.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
     "@types/lodash-es": "^4.17.6",
