--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "monaco-editor-core": "^0.34.0",
     "monaco-vim": "^0.3.4",
     "nodemon": "^2.0.20",
+    "p-queue": "^7.3.0",
     "patch-package": "^6.4.7",
     "penpal": "^6.2.2",
     "react": "^18.2.0",
@@ -67,7 +68,6 @@
     "ts-is-defined": "^3.0.4",
     "ts-morph": "^16.0.0",
     "ts-unused-exports": "^8.0.0",
-    "tsutils": "^3.21.0",
     "vite-plugin-monaco-editor": "^1.1.0",
     "vite-plugin-pwa": "^0.13.1",
     "workbox-cacheable-response": "^6.5.4",
