--- a/package.json
+++ b/package.json
@@ -7,11 +7,8 @@
     "dev": "vite --port 3000",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "storybook": "start-storybook -p 6006 --no-open",
-    "build-storybook": "build-storybook",
     "postinstall": "yarn patch-package",
     "dev:vite": "vite --port 3000",
-    "dev:ladle": "ladle serve",
     "dev:server": "nodemon",
     "dev:devtools": "vite build --watch -c src/Devtools/vite.config.ts",
     "build:devtools": "yarn vite build -c src/Devtools/vite.config.ts"
@@ -19,7 +16,6 @@
   "dependencies": {
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
-    "@ladle/react": "^2.4.4",
     "@mui/icons-material": "^5.10.3",
     "@mui/lab": "^5.0.0-alpha.99",
     "@mui/material": "^5.10.5",
@@ -34,14 +30,13 @@
     "clipboard-js": "^0.3.6",
     "comlink": "^4.3.1",
     "cors": "^2.8.5",
-    "devtools-protocol": "^0.0.1046751",
+    "debug": "^4.3.e",
     "dts-bundle-generator": "^7.0.0",
     "eslint": "^8.25.0",
     "eslint-plugin-import": "^2.26.0",
     "express": "^4.18.1",
     "flatted": "^3.2.7",
     "idb-keyval": "^6.2.0",
-    "licia": "^1.37.0",
     "localforage": "^1.10.0",
     "lodash-es": "^4.17.21",
     "match-sorter": "^6.3.1",
@@ -80,19 +75,13 @@
     "@babel/core": "^7.20.5",
     "@babel/helper-plugin-utils": "^7.20.2",
     "@emotion/babel-plugin": "^11.10.2",
-    "@storybook/addon-actions": "^6.5.12",
-    "@storybook/addon-essentials": "^6.5.12",
-    "@storybook/addon-interactions": "^6.5.12",
-    "@storybook/addon-links": "^6.5.12",
-    "@storybook/builder-vite": "^0.2.2",
-    "@storybook/react": "^6.5.12",
-    "@storybook/testing-library": "^0.0.13",
     "@swc-node/register": "^1.5.4",
     "@swc/cli": "^0.1.57",
     "@swc/core": "^1.3.14",
     "@types/babel-core": "^6.25.7",
     "@types/babel__helper-plugin-utils": "^7.10.0",
     "@types/cors": "^2.8.12",
+    "@types/debug": "^4.1.7",
     "@types/express": "^4.17.14",
     "@types/lodash-es": "^4.17.6",
     "@types/react": "^18.0.17",
