--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@reach/menu-button": "^0.16.1",
     "@reach/tooltip": "^0.16.0",
     "@tanstack/react-query": "^4.18.0",
+    "@types/ts-expose-internals": "npm:ts-expose-internals@4.9.4",
     "@zodios/core": "^10.4.3",
     "@zodios/express": "^10.4.0",
     "@zodios/react": "^10.4.0",
@@ -30,19 +31,23 @@
     "clipboard-js": "^0.3.6",
     "comlink": "^4.3.1",
     "cors": "^2.8.5",
-    "debug": "^4.3.e",
+    "debug": "^4.3.4",
     "dts-bundle-generator": "^7.0.0",
+    "error-stack-parser": "^2.1.4",
     "eslint": "^8.25.0",
     "eslint-plugin-import": "^2.26.0",
     "express": "^4.18.1",
     "flatted": "^3.2.7",
+    "gitignore-to-glob": "^0.3.0",
     "idb-keyval": "^6.2.0",
+    "ignore": "^5.2.1",
     "localforage": "^1.10.0",
     "lodash-es": "^4.17.21",
     "match-sorter": "^6.3.1",
     "monaco-editor": "^0.34.0",
     "monaco-editor-core": "^0.34.0",
     "monaco-vim": "^0.3.4",
+    "multimatch": "^6.0.0",
     "nodemon": "^2.0.20",
     "p-queue": "^7.3.0",
     "patch-package": "^6.4.7",
@@ -101,7 +106,7 @@
     "eslint-plugin-unused-imports": "^2.0.0",
     "prettier": "^2.8.0",
     "ts-node": "^10.9.1",
-    "typescript": "^4.8.4",
+    "typescript": "^4.9.4",
     "vite": "^3.1.0",
     "vite-node": "^0.23.4"
   },
