--- a/package.json
+++ b/package.json
@@ -45,9 +45,11 @@
     "match-sorter": "^6.3.1",
     "monaco-editor": "^0.34.1",
     "monaco-editor-core": "^0.34.1",
+    "monaco-languageclient": "^4.0.3",
     "monaco-vim": "^0.3.5",
     "multimatch": "^6.0.0",
     "nodemon": "^2.0.20",
+    "normalize-url": "^8.0.0",
     "p-queue": "^7.3.0",
     "patch-package": "^6.5.0",
     "penpal": "^6.2.2",
@@ -60,18 +62,26 @@
     "react-router-dom": "^6.5.0",
     "react-virtualized-auto-sizer": "^1.0.7",
     "react-window": "^1.8.8",
+    "request-light": "^0.6.0",
     "rollup-plugin-dts": "^5.0.0",
     "serve-index": "^1.9.1",
     "sort-by": "^1.2.0",
     "subsecond": "^0.2.1",
     "ts-is-defined": "^3.0.4",
     "ts-unused-exports": "^8.0.5",
+    "typescript-language-server": "^3.0.2",
     "vite-plugin-monaco-editor": "^1.1.0",
     "vite-plugin-pwa": "^0.14.0",
+    "vscode-languageserver": "^8.0.2",
+    "vscode-languageserver-protocol": "^3.17.2",
+    "vscode-languageserver-textdocument": "^1.0.8",
+    "vscode-uri": "^3.0.7",
+    "vscode-ws-jsonrpc": "^2.0.1",
     "workbox-cacheable-response": "^6.5.4",
     "workbox-core": "^6.5.4",
     "workbox-routing": "^6.5.4",
     "workbox-strategies": "^6.5.4",
+    "ws": "^8.12.0",
     "zod": "^3.20.2",
     "zustand": "^4.1.5"
   },
@@ -93,9 +103,11 @@
     "@types/react-dom": "^18.0.9",
     "@types/serve-index": "^1.9.1",
     "@types/wicg-file-system-access": "^2020.9.5",
+    "@types/ws": "^8.5.4",
     "@typescript-eslint/eslint-plugin": "^5.46.1",
     "@typescript-eslint/parser": "^5.46.1",
-    "@vitejs/plugin-react": "^3.0.0",
+    "@vitejs/plugin-react": "^3.0.1",
+    "@vitejs/plugin-react-swc": "^3.0.1",
     "babel-loader": "^9.1.0",
     "concurrently": "^7.6.0",
     "eslint-config-prettier": "^8.5.0",
@@ -105,8 +117,9 @@
     "eslint-plugin-unused-imports": "^2.0.0",
     "prettier": "^2.8.1",
     "ts-node": "^10.9.1",
+    "ts-to-zod": "^1.13.1",
     "typescript": "^4.9.4",
-    "vite": "^4.0.1",
+    "vite": "^4.0.4",
     "vite-node": "^0.25.8"
   },
   "prettier": {
