--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "debug": "^4.3.4",
     "dts-bundle-generator": "^7.1.0",
     "error-stack-parser": "^2.1.4",
+    "esbuild-plugin-copy": "^2.0.2",
     "eslint": "^8.30.0",
     "eslint-plugin-import": "^2.26.0",
     "express": "^4.18.2",
@@ -54,6 +55,8 @@
     "p-queue": "^7.3.0",
     "patch-package": "^6.5.0",
     "penpal": "^6.2.2",
+    "pino": "^8.8.0",
+    "pino-pretty": "^9.1.1",
     "react": "^18.2.0",
     "react-dev-utils": "^12.0.1",
     "react-dom": "^18.2.0",
@@ -99,6 +102,7 @@
     "@types/debug": "^4.1.7",
     "@types/express": "^4.17.15",
     "@types/lodash-es": "^4.17.6",
+    "@types/prettier": "^2.7.2",
     "@types/react": "^18.0.26",
     "@types/react-dev-utils": "^9.0.11",
     "@types/react-dom": "^18.0.9",
@@ -116,7 +120,7 @@
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-unused-imports": "^2.0.0",
-    "prettier": "^2.8.1",
+    "prettier": "^2.8.3",
     "ts-node": "^10.9.1",
     "ts-to-zod": "^1.13.1",
     "typescript": "^4.9.4",
