--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "pino-pretty": "^9.1.1",
     "react": "^18.2.0",
     "react-dev-utils": "^12.0.1",
+    "react-devtools-inline": "^4.27.1",
     "react-dom": "^18.2.0",
     "react-monaco-editor": "^0.51.0",
     "react-mosaic-component": "^5.3.0",
