Tree from react devtools

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@mui/material": "^5.11.0",
     "@reach/menu-button": "^0.18.0",
     "@tanstack/react-query": "^4.20.4",
+    "@types/react-devtools-inline": "^4.24.3",
     "@types/ts-expose-internals": "npm:ts-expose-internals@4.9.4",
     "@zodios/core": "^10.7.1",
     "@zodios/express": "^10.4.4",
@@ -66,6 +67,7 @@
     "react-penpal": "^1.0.4",
     "react-router-dom": "^6.5.0",
     "react-virtualized-auto-sizer": "^1.0.7",
+    "react-virtuoso": "^4.1.0",
     "react-window": "^1.8.8",
     "request-light": "^0.6.0",
     "rollup-plugin-dts": "^5.0.0",
@@ -124,7 +126,6 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-unused-imports": "^2.0.0",
     "prettier": "^2.8.3",
-    "react-reconciler": "^0.29.0",
     "ts-node": "^10.9.1",
     "ts-to-zod": "^1.13.1",
     "typescript": "^4.9.4",
