--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,8 @@
     "baseUrl": "/",
     "paths": {
       "typescript": ["typescript-local"]
-    }
+    },
+    "typeRoots": ["src/types"]
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
