--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "@mui/icons-material": "^5.11.0",
     "@mui/lab": "^5.0.0-alpha.112",
     "@mui/material": "^5.11.0",
-    "@reach/menu-button": "^0.18.0",
     "@tanstack/react-query": "^4.20.4",
     "@types/react-devtools-inline": "^4.24.3",
     "@types/ts-expose-internals": "npm:ts-expose-internals@4.9.4",
@@ -125,6 +124,8 @@
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-unused-imports": "^2.0.0",
+    "flow-to-ts": "^1.0.16",
+    "jscodeshift": "^0.14.0",
     "prettier": "^2.8.3",
     "ts-node": "^10.9.1",
     "ts-to-zod": "^1.13.1",
