--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-dev-utils": "^12.0.1",
     "react-devtools-inline": "^4.27.1",
     "react-dom": "^18.2.0",
+    "react-hotkeys": "^2.0.0",
     "react-monaco-editor": "^0.51.0",
     "react-mosaic-component": "^5.3.0",
     "react-penpal": "^1.0.4",
@@ -70,6 +71,8 @@
     "request-light": "^0.6.0",
     "rollup-plugin-dts": "^5.0.0",
     "serve-index": "^1.9.1",
+    "socket.io": "^4.6.1",
+    "socket.io-client": "^4.6.1",
     "sort-by": "^1.2.0",
     "subsecond": "^0.2.1",
     "ts-is-defined": "^3.0.4",
