--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "comlink": "^4.3.1",
     "cors": "^2.8.5",
     "debug": "^4.3.4",
+    "dotenv": "^16.0.3",
     "dts-bundle-generator": "^7.1.0",
     "error-stack-parser": "^2.1.4",
     "esbuild-plugin-copy": "^2.0.2",
