--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "match-sorter": "^6.3.1",
     "monaco-editor": "^0.34.1",
     "monaco-editor-core": "^0.34.1",
+    "monaco-editor-workers": "^0.36.0",
     "monaco-languageclient": "^4.0.3",
     "monaco-vim": "^0.3.5",
     "multimatch": "^6.0.0",
@@ -90,7 +91,7 @@
     "typescript-language-server": "^3.0.2",
     "vite-plugin-monaco-editor": "^1.1.0",
     "vite-plugin-pwa": "^0.14.0",
-    "vscode-languageserver": "^8.0.2",
+    "vscode-languageserver": "^8.1.0",
     "vscode-languageserver-protocol": "^3.17.2",
     "vscode-languageserver-textdocument": "^1.0.8",
     "vscode-uri": "^3.0.7",
@@ -144,7 +145,8 @@
     "ts-to-zod": "^1.13.1",
     "typescript": "^4.9.5",
     "vite": "^4.0.4",
-    "vite-node": "^0.25.8"
+    "vite-node": "^0.25.8",
+    "vite-plugin-node-polyfills": "^0.7.0"
   },
   "prettier": {
     "$schema": "http://json.schemastore.org/prettierrc",
