--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "@babel/traverse": "^7.21.2",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@hocuspocus/extension-logger": "^2.0.1",
+    "@hocuspocus/provider": "^2.0.1",
+    "@hocuspocus/server": "^2.0.1",
     "@mui/icons-material": "^5.11.0",
     "@mui/lab": "^5.0.0-alpha.112",
     "@mui/material": "^5.11.0",
@@ -44,6 +47,7 @@
     "eslint": "^8.30.0",
     "eslint-plugin-import": "^2.26.0",
     "express": "^4.18.2",
+    "express-ws": "^5.0.2",
     "flatted": "^3.2.7",
     "gitignore-to-glob": "^0.3.0",
     "idb-keyval": "^6.2.0",
@@ -100,7 +104,10 @@
     "workbox-core": "^6.5.4",
     "workbox-routing": "^6.5.4",
     "workbox-strategies": "^6.5.4",
-    "ws": "^8.12.0",
+    "ws": "^8.13.0",
+    "y-monaco": "^0.1.4",
+    "y-websocket": "^1.5.0",
+    "yjs": "^13.5.51",
     "zod": "^3.20.2",
     "zustand": "^4.1.5"
   },
@@ -116,6 +123,7 @@
     "@types/cors": "^2.8.13",
     "@types/debug": "^4.1.7",
     "@types/express": "^4.17.15",
+    "@types/express-ws": "^3.0.1",
     "@types/lodash-es": "^4.17.6",
     "@types/prettier": "^2.7.2",
     "@types/react": "^18.0.26",
