--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "babel-plugin-import": "^1.13.5",
     "buffer": "^6.0.3",
     "chalk": "^5.2.0",
+    "chokidar": "^3.5.3",
     "clipboard-js": "^0.3.6",
     "comlink": "^4.3.1",
     "cors": "^2.8.5",
