--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@babel/traverse": "^7.21.2",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@esbuild-kit/esm-loader": "^2.5.5",
     "@hocuspocus/extension-logger": "^2.0.1",
     "@hocuspocus/provider": "^2.0.1",
     "@hocuspocus/server": "^2.0.1",
@@ -105,6 +106,7 @@
     "workbox-core": "^6.5.4",
     "workbox-routing": "^6.5.4",
     "workbox-strategies": "^6.5.4",
+    "write-file-atomic": "^5.0.0",
     "ws": "^8.13.0",
     "y-monaco": "^0.1.4",
     "y-websocket": "^1.5.0",
@@ -135,13 +137,14 @@
     "@types/react-window": "^1.8.5",
     "@types/serve-index": "^1.9.1",
     "@types/wicg-file-system-access": "^2020.9.5",
+    "@types/write-file-atomic": "^4.0.0",
     "@types/ws": "^8.5.4",
     "@typescript-eslint/eslint-plugin": "^5.46.1",
     "@typescript-eslint/parser": "^5.46.1",
     "@vitejs/plugin-react": "^3.0.1",
     "@vitejs/plugin-react-swc": "^3.0.1",
     "babel-loader": "^9.1.0",
-    "concurrently": "^7.6.0",
+    "esbuild": "^0.17.15",
     "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-typescript": "^3.5.2",
     "eslint-plugin-react": "^7.31.11",
