--- a/package.json
+++ b/package.json
@@ -22,19 +22,22 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@esbuild-kit/esm-loader": "^2.5.5",
-    "@hocuspocus/extension-logger": "^2.0.1",
-    "@hocuspocus/provider": "^2.0.1",
-    "@hocuspocus/server": "^2.0.1",
+    "@hocuspocus/extension-database": "^2.0.3",
+    "@hocuspocus/extension-logger": "^2.0.3",
+    "@hocuspocus/provider": "^2.0.3",
+    "@hocuspocus/server": "^2.0.3",
     "@mui/icons-material": "^5.11.0",
     "@mui/lab": "^5.0.0-alpha.112",
     "@mui/material": "^5.11.0",
     "@tanstack/react-query": "^4.20.4",
+    "@types/better-sqlite3": "^7.6.4",
     "@types/ts-expose-internals": "npm:ts-expose-internals@4.9.5",
     "@zodios/core": "^10.7.1",
     "@zodios/express": "^10.4.4",
     "@zodios/react": "^10.4.0",
     "axios": "^1.2.1",
     "babel-plugin-import": "^1.13.5",
+    "better-sqlite3": "^8.2.0",
     "buffer": "^6.0.3",
     "chalk": "^5.2.0",
     "chokidar": "^3.5.3",
