Yjs only in client

--- a/package.json
+++ b/package.json
@@ -22,10 +22,6 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@esbuild-kit/esm-loader": "^2.5.5",
-    "@hocuspocus/extension-database": "^2.0.3",
-    "@hocuspocus/extension-logger": "^2.0.3",
-    "@hocuspocus/provider": "^2.0.3",
-    "@hocuspocus/server": "^2.0.3",
     "@mui/icons-material": "^5.11.0",
     "@mui/lab": "^5.0.0-alpha.112",
     "@mui/material": "^5.11.0",
@@ -86,6 +82,7 @@
     "react-virtualized-auto-sizer": "^1.0.7",
     "react-virtuoso": "^4.1.0",
     "react-window": "^1.8.8",
+    "reconnecting-websocket": "^4.4.0",
     "request-light": "^0.6.0",
     "rollup-plugin-dts": "^5.0.0",
     "rooks": "^7.4.4",
