--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
     "vscode-languageserver-textdocument": "^1.0.8",
     "vscode-uri": "^3.0.7",
     "vscode-ws-jsonrpc": "^2.0.1",
+    "webpack-sources": "^3.2.3",
     "workbox-cacheable-response": "^6.5.4",
     "workbox-core": "^6.5.4",
     "workbox-routing": "^6.5.4",
@@ -158,7 +159,8 @@
     "typescript": "^4.9.5",
     "vite": "^4.0.4",
     "vite-node": "^0.25.8",
-    "vite-plugin-node-polyfills": "^0.7.0"
+    "vite-plugin-node-polyfills": "^0.7.0",
+    "@types/webpack": "^5.28.1"
   },
   "prettier": {
     "$schema": "http://json.schemastore.org/prettierrc",
