--- a/package.json
+++ b/package.json
@@ -143,6 +143,7 @@
     "@types/react-virtualized-auto-sizer": "^1.0.1",
     "@types/react-window": "^1.8.5",
     "@types/serve-index": "^1.9.1",
+    "@types/webpack": "^5.28.1",
     "@types/wicg-file-system-access": "^2020.9.5",
     "@types/write-file-atomic": "^4.0.0",
     "@types/ws": "^8.5.4",
@@ -165,8 +166,7 @@
     "typescript": "^4.9.5",
     "vite": "^4.0.4",
     "vite-node": "^0.25.8",
-    "vite-plugin-node-polyfills": "^0.7.0",
-    "@types/webpack": "^5.28.1"
+    "vite-plugin-node-polyfills": "^0.7.0"
   },
   "prettier": {
     "$schema": "http://json.schemastore.org/prettierrc",
