Zoom with use gesture

--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
     "@mui/icons-material": "^5.11.0",
     "@mui/lab": "^5.0.0-alpha.112",
     "@mui/material": "^5.11.0",
+    "@react-spring/web": "^9.7.2",
     "@tanstack/react-query": "^4.20.4",
     "@types/better-sqlite3": "^7.6.4",
     "@types/ts-expose-internals": "npm:ts-expose-internals@4.9.5",
+    "@use-gesture/react": "^10.2.26",
     "@zodios/core": "^10.7.1",
     "@zodios/express": "^10.4.4",
     "@zodios/react": "^10.4.0",
