--- a/src/server/tsconfig.json
+++ b/src/server/tsconfig.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "target": "ESNext",
     "useDefineForClassFields": true,
+    "module": "ESNext",
     "lib": ["ESNext"]
   }
 }
