--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@babel/plugin-syntax-typescript": "^7.21.4",
     "@babel/template": "^7.20.7",
     "@babel/traverse": "^7.21.4",
+    "@babel/types": "^7.21.4",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@esbuild-kit/esm-loader": "^2.5.5",
@@ -161,7 +162,6 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-unused-imports": "^2.0.0",
     "flow-to-ts": "^1.0.16",
-    "jscodeshift": "^0.14.0",
     "prettier": "^2.8.7",
     "ts-node": "^10.9.1",
     "ts-to-zod": "^3.0.0",
@@ -178,5 +178,9 @@
   },
   "volta": {
     "node": "16.17.0"
+  },
+  "resolutions": {
+    "@babel/types": "^7.21.4",
+    "**/@babel/types": "^7.21.4"
   }
 }
